[gd_scene load_steps=4 format=3 uid="uid://doltcoflrwktf"]

[ext_resource type="Script" path="res://scripts/card.gd" id="1_nei3b"]
[ext_resource type="Texture2D" uid="uid://dr8hbh4gadbta" path="res://assets/graphics/card_blank.svg" id="2_pn3le"]
[ext_resource type="Texture2D" uid="uid://blxkrpdcaai8v" path="res://assets/graphics/energy.svg" id="3_osvk8"]

[node name="Card" type="Area2D"]
script = ExtResource("1_nei3b")

[node name="Sprite2D" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture = ExtResource("2_pn3le")

[node name="MarginContainer" type="MarginContainer" parent="Sprite2D"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -64.0
offset_top = -64.0
offset_right = -64.0
offset_bottom = -64.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Control" type="Control" parent="Sprite2D/MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="NameLabel" type="Label" parent="Sprite2D/MarginContainer/Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.27451, 0.254902, 0.160784, 1)
text = "CARD_NAME"
horizontal_alignment = 1

[node name="TextLabel" type="Label" parent="Sprite2D/MarginContainer/Control"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 54)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -49.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.27451, 0.254902, 0.160784, 1)
text = "long text test here"
horizontal_alignment = 1
autowrap_mode = 2

[node name="ScaleUpButton" type="Button" parent="Sprite2D/MarginContainer/Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -40.5
offset_top = -31.0
offset_right = 40.5
grow_horizontal = 2
grow_vertical = 0
focus_mode = 0
text = "SCALE UP"

[node name="EnergyControl" type="Control" parent="Sprite2D/MarginContainer/Control"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 1
anchors_preset = 0
offset_right = 32.0
offset_bottom = 32.0
tooltip_text = "Your current energy.
Energy is spent on playing cards.
Energy is gained by controlling the board."

[node name="Sprite2D" type="Sprite2D" parent="Sprite2D/MarginContainer/Control/EnergyControl"]
scale = Vector2(0.25, 0.25)
texture = ExtResource("3_osvk8")
centered = false

[node name="EnergyLabel" type="Label" parent="Sprite2D/MarginContainer/Control/EnergyControl"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -10.0
offset_right = 4.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.215686, 0.156863, 0.219608, 1)
theme_override_font_sizes/font_size = 14
text = "X"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(64, 64, -64, 64, -64, -64, 64, -64)

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
